<resources>
    <string name="app_name">Sports Mates</string>
    <string name="tab_bar_home_tab_title">Home</string>
    <string name="tab_bar_places_tab_title">Places</string>
    <string name="tab_bar_discover_tab_title">Discover</string>
    <string name="tab_bar_coach_tab_title">Coach</string>
    <string name="tab_bar_profile_tab_title">Profile</string>
    <string name="profile_about_me_title">About Me</string>
    <string name="profile_sports_title">My Sports</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="sign_out_button">Sign out</string>
    <string name="done_button">Done</string>
    <string name="tab_layout_news">News</string>
    <string name="tab_layout_event">Events</string>
    <string name="tv_Message">Message</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="permissin_denied">Permission Denied</string>
    <string name="login">Login</string>
    <string-array name="citys">
        <item>Damietta</item>
        <item>Mansoura</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="damietta">Damietta</string>
    <string name="mansoura">Mansoura</string>
    <string name="mail">Mail</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="sports">Sports</string>
    <string name="intent_extra_user">User</string>
    <string name="intent_extra_edit">Edit</string>
    <string name="intent_extra_hint">Hint</string>
    <string name="error_toast_title">Error</string>
    <string name="success_toast_title">Success</string>
    <string name="warning_toast_title">Warning</string>
    <string name="info_toast_title">Info</string>
    <string name="payment">Payment</string>
    <string name="chatbot_name">NutroX</string>
</resources>