<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:backgroundTint="@color/main_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:backgroundTint="@color/main_green"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:backgroundTint="@color/main_green"
                    android:src="@drawable/ic_baseline_arrow_back_24" />
                <TextView
                    android:id="@+id/app_bar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/tv_edit_profile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.37"
                    app:layout_constraintStart_toEndOf="@id/back_btn"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">
        <FrameLayout
            android:id="@+id/upload_photo"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/uploaded_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/upload_pic"
                />
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:shimmer_auto_start="false"
                >
                <include layout="@layout/update_photo_shimmer"/>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageButton
                android:id="@+id/upload_photo_button"
                android:layout_width="@dimen/dimen_32"
                android:layout_height="@dimen/dimen_32"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="@dimen/dimen_12"
                android:layout_marginBottom="@dimen/dimen_8"
                android:background="@drawable/rounded"
                android:backgroundTint="@color/main_green"
                android:src="@drawable/ic_outline_add_24"
                android:textStyle="bold"
               />
        </FrameLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/name"
            app:boxStrokeColor="@color/main_green"
            app:hintTextColor="@color/main_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_72"
            app:layout_constraintTop_toBottomOf="@+id/upload_photo"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/main_green">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="ragaa"
            android:textSize="@dimen/dimen_16"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/dark_grey"
            android:focusable="false"
            android:drawableStart="@drawable/ic_user"
            android:drawableEnd="@drawable/ic_edit"
            android:drawablePadding="@dimen/dimen_24"
            android:backgroundTint="@color/white"
            app:boxStrokeColor="@color/grey"
            android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:hint="@string/mail"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:startIconDrawable="@drawable/ic_envelope"
            app:layout_constraintTop_toBottomOf="@id/name_box"
            app:startIconTint="@color/main_green">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_grey"
                tools:text="ragaa"
                android:drawableEnd="@drawable/ic_edit"
                android:focusable="false"
                android:drawablePadding="@dimen/dimen_24"
                android:backgroundTint="@color/white"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:startIconDrawable="@drawable/ic_city"
            app:layout_constraintTop_toBottomOf="@id/mail_box"
            app:startIconTint="@color/main_green">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_grey"
                tools:text="ragaa"
                android:drawableEnd="@drawable/ic_edit"
                android:focusable="false"
                android:drawablePadding="@dimen/dimen_24"
                android:backgroundTint="@color/white"
                app:boxStrokeColor="@color/main_green"
                app:hintTextColor="@color/main_green"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:startIconDrawable="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@id/city_box"
            app:startIconTint="@color/main_green">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_grey"
                tools:text="ragaa"
                android:drawableEnd="@drawable/ic_edit"
                android:focusable="false"
                android:drawablePadding="@dimen/dimen_24"
                android:backgroundTint="@color/white"
                app:boxStrokeColor="@color/main_green"
                app:hintTextColor="@color/main_green"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bio_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:startIconDrawable="@drawable/user_solid"
            app:layout_constraintTop_toBottomOf="@id/password_box"
            app:startIconTint="@color/main_green">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_grey"
                tools:text="ragaa"
                android:drawableEnd="@drawable/ic_edit"
                android:focusable="false"
                android:maxLines="1"
                android:ellipsize="end"
                android:drawablePadding="@dimen/dimen_24"
                android:backgroundTint="@color/white"
                app:boxStrokeColor="@color/main_green"
                app:hintTextColor="@color/main_green"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sports_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/sports"
            app:boxStrokeColor="@color/main_green"
            app:hintTextColor="@color/main_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimen_8"
            app:startIconDrawable="@drawable/ic_sports"
            app:layout_constraintTop_toBottomOf="@id/bio_box"
            app:startIconTint="@color/main_green">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_16"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/dark_grey"
                tools:text="ragaa"
                android:drawableEnd="@drawable/ic_edit"
                android:focusable="false"
                android:maxLines="1"
                android:ellipsize="end"
                android:drawablePadding="@dimen/dimen_24"
                android:backgroundTint="@color/white"
                app:boxStrokeColor="@color/main_green"
                app:hintTextColor="@color/main_green"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
</ScrollView>