<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map"
    tools:context=".profile.ProfileFragment">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage"
        tools:text="TextView" />

    <!-- <TextView
         android:id="@+id/profilePhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         tools:text="TextView"
         android:textSize="18sp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/profileName"
         app:layout_constraintTop_toBottomOf="@+id/profileName" />-->

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/profileName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileName"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        tools:text="TextView" />

    <TextView
        android:id="@+id/profileAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/profileEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profileEmail"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        tools:text="TextView" />

    <TextView
        android:id="@+id/ProfileAboutMeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/profile_about_me_title"
        android:textColor="@color/main_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/ProfileAboutMeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ProfileAboutMeTitle"
        app:layout_constraintTop_toBottomOf="@+id/ProfileAboutMeTitle"
        tools:text="TextView" />

    <TextView
        android:id="@+id/ProfileSportsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/profile_sports_title"
        android:textColor="@color/main_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ProfileSportsTitle">

        <!-- Chips can be declared here, or added dynamically. -->
        <com.google.android.material.chip.Chip
            android:id="@+id/sports1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/offWhite"
            android:clickable="false"
            android:fontFamily="@font/roboto_regular"
            tools:text="Football" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sports2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/offWhite"
            android:clickable="false"
            android:fontFamily="@font/roboto_regular"
            android:visibility="gone"
            tools:text="Football" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sports3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/offWhite"
            android:clickable="false"
            android:fontFamily="@font/roboto_regular"
            android:visibility="gone"
            tools:text="Football" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorSeparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup" />

    <TextView
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_edit"
        android:drawablePadding="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/edit_profile_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorSeparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileButton" />

    <TextView
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_logout"
        android:drawablePadding="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sign_out_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />


</androidx.constraintlayout.widget.ConstraintLayout>
